 * Added ColumRef child class to represent functions calls

1.5.0 M3 (unreleased)
 * Added support for tinyint and smallint types (SPARKC-269)
 * Updated Java driver version to 3.0.0-alpha3.
 * Changed the way CassandraConnectorSource is obtained due to SPARK-7171 (SPARKC-268)

1.5.0 M2
 * Bump Java Driver to 2.2.0-rc3, Guava to 16.0.1 and test against Cassandra 2.2.1 (SPARKC-229)
 * Includes all patches up to 1.4.0.

1.5.0 M1
 * Added ability to build against unreleased Spark versions (SPARKC-242)
 * Spark 1.5 initial integration (SPARKC-241)

********************************************************************************
 * Map InetAddress and UUID to string and store it as StringType in Spark SQL (SPARKC-259)
 * VarInt Column is converted to decimal stored in Spark SQL (SPARKC-266)
 * Retrieve TableSize from Cassandra system table for datasource relation (SPARKC-164)
 * Upgrade integration tests to use Cassandra 2.1.9 and upgrade Java Driver 
   to 2.1.7.1, Spark to 1.4.1 (SPARKC-248)

1.4.0
 * Fixed broken integration tests (SPARKC-247):
   - Fixed Scala reflection race condition in TupleColumnMapper.
   - Fixed dev/run-real-tests script.
   - Fixed CheckpointStreamSpec test.

1.4.0 RC1
 * Added TTL and WRITETIME documentation (SPARKC-244)
 * Reduced the amount of unneccessary error logging in integration tests (SPARKC-223)
 * Fixed Repartition and JWC and Streaming Checkpointing broken by serialization
   errors related to passing RowWriteFactory / DefaultRowWriter (SPARKC-202)
 * Fixed exceptions occuring when performing RDD operations on any 
   CassandraTableScanJavaRDD (SPARKC-236)

1.4.0 M3
 * Fixed UDT column bug in SparkSQL (SPARKC-219)
 * Includes all patches up to release 1.2.5 and 1.3.0
   - Fixed connection caching, changed SSL EnabledAlgorithms to Set (SPARKC-227)

1.4.0 M2
 * Includes some unreleased patches from 1.2.5
   - Changed default query timeout from 12 seconds to 2 minutes (SPARKC-220)