@@ -15,7 +15,7 @@ import org.apache.spark.SparkConf
   * @param batchGroupingBufferSize the number of distinct batches that can be buffered before
   *                        they are written to Cassandra
   * @param batchGroupingKey which rows can be grouped into a single batch
-  * @param consistencyLevel consistency level for writes, default LOCAL_ONE
+  * @param consistencyLevel consistency level for writes, default LOCAL_QUORUM
   * @param parallelismLevel number of batches to be written in parallel
   * @param ttl       the default TTL value which is used when it is defined (in seconds)
   * @param timestamp the default timestamp value which is used when it is defined (in microseconds)
@@ -57,7 +57,7 @@ object WriteConf {
   val ConsistencyLevelParam = ConfigParameter[ConsistencyLevel](
     name = "spark.cassandra.output.consistency.level",
     section = ReferenceSection,
-    default = ConsistencyLevel.LOCAL_ONE,
+    default = ConsistencyLevel.LOCAL_QUORUM,
     description = """Consistency level for writing""")
 
   val BatchSizeRowsParam = ConfigParameter[Option[Int]](
@@ -131,8 +131,6 @@ object WriteConf {
     ThroughputMiBPSParam,
     TaskMetricsParam
   )
-
-
 
   def fromSparkConf(conf: SparkConf): WriteConf = {
 
